--- a/packages/blueprint/tsconfig.json
+++ b/packages/blueprint/tsconfig.json
@@ -1,7 +1,13 @@
 {
   "extends": "./../tsconfig.base.json",
   "compilerOptions": {
-    "baseUrl": "./"
+    "module": "AMD",
+    "moduleResolution": "node",
+    "lib": ["es5", "es6", "dom"],
+    "baseUrl": "./",
+    "outFile": "./build/build.js",
+    "preserveConstEnums": true,
+    "removeComments": true
   },
   "include": ["*.ts", "**/*.ts"]
 }
