--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ucsjs/workspace",
-  "version": "0.0.6",
-  "description": "UCS.js: Web reactivity with Websocket, Protobuf and RXJS",
+  "version": "0.0.7",
+  "description": "UCS.js: Web reactivity with Websocket, Protobuf and RXJS (@workspace)",
   "author": "Andre Ferreira <andrehrf@gmail.com>",
   "license": "MIT",
   "private": false,
@@ -33,8 +33,10 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@ucsjs/blueprint": "^0.0.8",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "cscript": "^1.0.26",
     "fast-glob": "^3.2.11",
     "language-detect": "^1.1.0",
     "mime-types": "^2.1.35",
@@ -63,6 +65,7 @@
     "gulp-typescript": "^6.0.0-alpha.1",
     "jest": "^27.2.5",
     "lerna": "^5.5.0",
+    "nodemon": "^2.0.19",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
