--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,10 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
   },
-  "include": ["src/**/*.ts"],
+  "include": [
+    "src/**/*.ts",
+    ".workspace/**/*.ts"
+  ],
   "exclude": [
     "node_modules",
     "dist",
