--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
-    "@ucsjs/blueprint": "^0.0.11",
+    "@ucsjs/blueprint": "^0.0.13",
+    "argv": "^0.0.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cscript": "^1.0.26",
