--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/websockets": "^9.0.11",
     "@ucsjs/blueprint": "^0.0.13",
     "argv": "^0.0.2",
     "compression": "^1.7.4",
@@ -41,6 +42,7 @@
     "fast-glob": "^3.2.11",
     "language-detect": "^1.1.0",
     "mime-types": "^2.1.35",
+    "node-pty": "^0.10.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.6"
