--- a/packages/blueprint/tsconfig.json
+++ b/packages/blueprint/tsconfig.json
@@ -1,8 +1,7 @@
 {
 	"extends": "./../tsconfig.base.json",
 	"compilerOptions": {
-	  	"baseUrl": "./src",
-		"outDir": "./dist",
+	  	"baseUrl": "./"
 	},
 	"include": ["*.ts", "**/*.ts"],
 	"exclude": ["./src/samples"]
