--- a/packages/mongodb/package.json
+++ b/packages/mongodb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ucsjs/mongodb",
-  "version": "0.0.16",
+  "version": "0.0.18",
   "description": "UCS.js: Module (@mongodb)",
   "author": "Andre Ferreira",
   "license": "MIT",
@@ -23,7 +23,7 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
-    "@ucsjs/blueprint": "^0.0.16",
+    "@ucsjs/blueprint": "0.0.18",
     "mongodb": "^4.9.1",
     "rxjs": "^7.5.6"
   }
