--- a/packages/mongodb/package.json
+++ b/packages/mongodb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ucsjs/mongodb",
-  "version": "0.0.18",
+  "version": "0.0.19",
   "description": "UCS.js: Module (@mongodb)",
   "author": "Andre Ferreira",
   "license": "MIT",
@@ -15,7 +15,6 @@
     "url": "https://github.com/ucsjs"
   },
   "publishConfig": {
-    "directory": "dist",
     "access": "public"
   },
   "devDependencies": {
@@ -23,8 +22,9 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
-    "@ucsjs/blueprint": "0.0.18",
+    "@ucsjs/blueprint": "0.0.19",
     "mongodb": "^4.9.1",
     "rxjs": "^7.5.6"
-  }
+  },
+  "gitHead": "d42971028a71148c5163415e2a857be1094e4cd8"
 }
