--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ucsjs/workspace",
   "version": "0.0.17",
-  "description": "UCS.js: Web reactivity with Websocket, Protobuf and RXJS (@workspace)",
+  "description": "UCS.js (@workspace)",
   "author": "Andre Ferreira <andrehrf@gmail.com>",
   "license": "MIT",
   "private": false,
