--- a/packages/blueprint/package.json
+++ b/packages/blueprint/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ucsjs"
+    "url": "https://github.com/ucsjs/workspace"
   },
   "publishConfig": {
     "access": "public"
