--- a/packages/mongodb/package.json
+++ b/packages/mongodb/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ucsjs"
+    "url": "https://github.com/ucsjs/workspace"
   },
   "publishConfig": {
     "access": "public"
@@ -22,8 +22,10 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
+    "@nestjs/mongoose": "^9.2.0",
     "@ucsjs/blueprint": "0.0.21",
     "mongodb": "^4.9.1",
+    "mongoose": "^6.6.0",
     "rxjs": "^7.5.6"
   },
   "gitHead": "d42971028a71148c5163415e2a857be1094e4cd8"
