--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/websockets": "^9.0.11",
     "@ucsjs/blueprint": "^0.0.21",
@@ -53,6 +54,7 @@
     "language-detect": "^1.1.0",
     "merge-stream": "^2.0.0",
     "mime-types": "^2.1.35",
+    "mongoose": "^6.6.0",
     "node-pty": "^0.10.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
