--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cscript": "^1.0.26",
+    "csurf": "^1.11.0",
+    "express-csrf-double-submit-cookie": "^1.1.0",
     "fast-glob": "^3.2.11",
+    "helmet": "^6.0.0",
     "language-detect": "^1.1.0",
     "merge-stream": "^2.0.0",
     "mime-types": "^2.1.35",
@@ -71,6 +74,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
