--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@ucsjs/mongodb",
+  "name": "@ucsjs/engine",
   "version": "0.0.25",
-  "description": "UCS.js: Module (@mongodb)",
+  "description": "UCS.js: Module (@engine)",
   "author": "Andre Ferreira",
   "license": "MIT",
   "private": false,
@@ -22,10 +22,7 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
-    "@nestjs/mongoose": "^9.2.0",
     "@ucsjs/blueprint": "0.0.25",
-    "mongodb": "^4.9.1",
-    "mongoose": "^6.6.0",
     "rxjs": "^7.5.6"
   },
   "gitHead": "d42971028a71148c5163415e2a857be1094e4cd8"
