--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   },
   "scripts": {
     "prebuild": "rimraf dist",
-    "build:packages": "gulp build --dist node_modules/@ucsjs",
-    "build:prod": "gulp build",
+    "build:packages": "gulp build --dist node_modules/@ucsjs && gulp browserify --dist node_modules/@ucsjs",
+    "build:browserify": "gulp browserify --dist node_modules/@ucsjs",
+    "build:prod": "gulp build && gulp browserify",
     "build:app": "nest build",
     "clean": "gulp clean:bundle",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -45,6 +46,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/websockets": "^9.0.11",
     "@ucsjs/blueprint": "^0.0.23",
+    "@ucsjs/engine": "^0.0.25",
     "@ucsjs/mongodb": "^0.0.23",
     "argv": "^0.0.2",
     "compression": "^1.7.4",
@@ -88,6 +90,7 @@
     "gulp-clean": "^0.4.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
+    "gulp-uglify": "^3.0.2",
     "jest": "^27.2.5",
     "lerna": "^5.5.0",
     "nodemon": "^2.0.19",
@@ -98,6 +101,8 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
