--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,5 +1,5 @@
 {
   "extends": "./tsconfig.json",
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "test", "dist", "**/*spec.ts", "**/media"]
+  "exclude": ["node_modules", "test", "dist", "**/*spec.ts", "**/media", "src/workspace/scripts"]
 }
