--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "csurf": "^1.11.0",
     "express-csrf-double-submit-cookie": "^1.1.0",
     "fast-glob": "^3.2.11",
+    "firebase-admin": "^11.0.1",
     "helmet": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
     "language-detect": "^1.1.0",
     "merge-stream": "^2.0.0",
     "mime-types": "^2.1.35",
