--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "publish": "npm run prerelease && npm run build:prod && ./node_modules/.bin/lerna publish --force-publish --exact -m \"chore(@ucsjs) publish %s release\""
+    "publish": "npm run prerelease && npm run build:prod && ./node_modules/.bin/lerna publish --force-publish --exact -m \"chore(@ucsjs) publish %s release\"",
+    "run:blueprint": "./node_modules/.bin/ts-node ./src/run.ts"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
