--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/schedule": "^2.1.0",
     "@nestjs/websockets": "^9.0.11",
     "@ucsjs/blueprint": "^0.0.31",
     "@ucsjs/engine": "^0.0.31",
@@ -79,6 +80,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
     "@types/multer": "^1.4.7",
