--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/websockets": "^9.0.11",
+    "@stackblitz/sdk": "^1.8.0",
     "@ucsjs/blueprint": "^0.0.35",
     "@ucsjs/engine": "^0.0.35",
     "@ucsjs/mongodb": "^0.0.35",
