fixes, inject dependencies subcomponents

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@ucsjs/engine": "^0.0.40",
     "@ucsjs/mongodb": "^0.0.40",
     "argv": "^0.0.2",
+    "browserify": "^17.0.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cscript": "^1.0.26",
@@ -71,15 +72,19 @@
     "g-i-s": "^2.1.6",
     "helmet": "^6.0.0",
     "image-to-uri": "^1.0.0",
+    "jsmin": "^1.0.1",
     "jsonwebtoken": "^8.5.1",
     "language-detect": "^1.1.0",
     "merge-stream": "^2.0.0",
     "mime-types": "^2.1.35",
     "mongoose": "^6.6.0",
     "node-pty": "^0.10.1",
+    "node-typescript-compiler": "^3.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.6",
+    "tsify": "^5.0.4",
+    "tsify-transform": "^1.0.0",
     "typeorm": "^0.3.10",
     "vscode-languageserver": "^8.0.2",
     "vscode-ws-jsonrpc": "^2.0.0"
