--- a/package.json
+++ b/package.json
@@ -1,131 +1,157 @@
 {
-  "name": "@ucsjs/workspace",
-  "version": "0.0.17",
-  "description": "UCS.js (@workspace)",
-  "author": "Andre Ferreira <andrehrf@gmail.com>",
-  "license": "MIT",
-  "private": false,
-  "homepage": "https://ucsjs.io",
-  "funding": {
-    "type": "opencollective",
-    "url": "https://opencollective.com/ucsjs"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ucsjs/workspace"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "keywords": [
-    "ucs",
-    "ucsjs",
-    "visual editor",
-    "blueprints"
-  ],
-  "scripts": {
-    "prebuild": "rimraf dist",
-    "build:packages": "gulp build --dist node_modules/@ucsjs && gulp browserify --dist node_modules/@ucsjs",
-    "build:browserify": "gulp browserify --dist node_modules/@ucsjs",
-    "build:prod": "gulp build && gulp browserify",
-    "build:app": "nest build",
-    "clean": "gulp clean:bundle",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "prebuild:prod": "npm run clean",
-    "prerelease": "gulp copy-misc && gulp build --dist node_modules/@ucsjs",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "publish": "npm run prerelease && npm run build:prod && ./node_modules/.bin/lerna publish --force-publish --exact -m \"chore(@ucsjs) publish %s release\"",
-    "run:blueprint": "./node_modules/.bin/ts-node ./src/run.ts"
-  },
-  "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/mongoose": "^9.2.0",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/schedule": "^2.1.0",
-    "@nestjs/swagger": "^6.1.2",
-    "@nestjs/websockets": "^9.0.11",
-    "@stackblitz/sdk": "^1.8.0",
-    "@ucsjs/blueprint": "^0.0.40",
-    "@ucsjs/database": "^0.0.40",
-    "@ucsjs/engine": "^0.0.40",
-    "@ucsjs/mongodb": "^0.0.40",
-    "argv": "^0.0.2",
-    "browserify": "^17.0.0",
-    "compression": "^1.7.4",
-    "cookie-parser": "^1.4.6",
-    "cscript": "^1.0.26",
-    "csurf": "^1.11.0",
-    "dotenv": "^16.0.2",
-    "express-csrf-double-submit-cookie": "^1.1.0",
-    "fast-glob": "^3.2.11",
-    "firebase-admin": "^11.0.1",
-    "g-i-s": "^2.1.6",
-    "helmet": "^6.0.0",
-    "image-to-uri": "^1.0.0",
-    "jsmin": "^1.0.1",
-    "jsonwebtoken": "^8.5.1",
-    "language-detect": "^1.1.0",
-    "merge-stream": "^2.0.0",
-    "mime-types": "^2.1.35",
-    "mongoose": "^6.6.0",
-    "node-pty": "^0.10.1",
-    "node-typescript-compiler": "^3.0.0",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.5.6",
-    "tsify": "^5.0.4",
-    "tsify-transform": "^1.0.0",
-    "typeorm": "^0.3.10",
-    "vscode-languageserver": "^8.0.2",
-    "vscode-ws-jsonrpc": "^2.0.0"
-  },
-  "resolutions": {
-    "vscode-languageserver-types": "3.17.2"
-  },
-  "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
-    "@types/cron": "^2.0.0",
-    "@types/express": "^4.17.13",
-    "@types/jest": "27.0.2",
-    "@types/multer": "^1.4.7",
-    "@types/node": "^18.7.18",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "delete-empty": "^3.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "fancy-log": "^2.0.0",
-    "gulp": "^4.0.2",
-    "gulp-clean": "^0.4.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-typescript": "^6.0.0-alpha.1",
-    "gulp-uglify": "^3.0.2",
-    "jest": "^27.2.5",
-    "lerna": "^5.5.0",
-    "nodemon": "^2.0.19",
-    "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0"
-  }
+	"name": "@ucsjs/workspace",
+	"version": "0.0.17",
+	"description": "UCS.js (@workspace)",
+	"author": "Andre Ferreira <andrehrf@gmail.com>",
+	"license": "MIT",
+	"private": false,
+	"homepage": "https://ucsjs.io",
+	"funding": {
+		"type": "opencollective",
+		"url": "https://opencollective.com/ucsjs"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/ucsjs/workspace"
+	},
+	"publishConfig": {
+		"access": "public"
+	},
+	"keywords": [
+		"ucs",
+		"ucsjs",
+		"visual editor",
+		"blueprints"
+	],
+	"scripts": {
+		"prebuild": "rimraf dist",
+		"build:packages": "gulp build --dist node_modules/@ucsjs && gulp browserify --dist node_modules/@ucsjs",
+		"build:browserify": "gulp browserify --dist node_modules/@ucsjs",
+		"build:prod": "gulp build && gulp browserify",
+		"build:app": "nest build",
+		"clean": "gulp clean:bundle",
+		"coverage": "nyc report --reporter=text-lcov | coveralls",
+		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+		"start": "nest start",
+		"dev": "nest start --watch",
+		"start:debug": "nest start --debug --watch",
+		"start:prod": "node dist/main",
+		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+		"prebuild:prod": "npm run clean",
+		"prerelease": "gulp copy-misc && gulp build --dist node_modules/@ucsjs",
+		"test": "mocha -r ts-node/register tests/**/*.spec.ts",
+		"publish": "npm run prerelease && npm run build:prod && ./node_modules/.bin/lerna publish --force-publish --exact -m \"chore(@ucsjs) publish %s release\"",
+		"run:blueprint": "./node_modules/.bin/ts-node ./src/run.ts"
+	},
+	"dependencies": {
+		"@nestjs/common": "^8.0.0",
+		"@nestjs/core": "^8.0.0",
+		"@nestjs/mongoose": "^9.2.0",
+		"@nestjs/platform-express": "^8.0.0",
+		"@nestjs/schedule": "^2.1.0",
+		"@nestjs/swagger": "^6.1.2",
+		"@nestjs/websockets": "^9.0.11",
+		"@stackblitz/sdk": "^1.8.0",
+		"@ucsjs/blueprint": "^0.0.40",
+		"@ucsjs/database": "^0.0.40",
+		"@ucsjs/engine": "^0.0.40",
+		"@ucsjs/mongodb": "^0.0.40",
+		"argv": "^0.0.2",
+		"browserify": "^17.0.0",
+		"compression": "^1.7.4",
+		"cookie-parser": "^1.4.6",
+		"cscript": "^1.0.26",
+		"csurf": "^1.11.0",
+		"dotenv": "^16.0.2",
+		"express-csrf-double-submit-cookie": "^1.1.0",
+		"express-static-gzip": "^2.1.7",
+		"fast-glob": "^3.2.11",
+		"firebase-admin": "^11.0.1",
+		"g-i-s": "^2.1.6",
+		"helmet": "^6.0.0",
+		"html-minifier": "^4.0.0",
+		"image-to-uri": "^1.0.0",
+		"jsmin": "^1.0.1",
+		"jsonwebtoken": "^8.5.1",
+		"language-detect": "^1.1.0",
+		"merge-stream": "^2.0.0",
+		"mime-types": "^2.1.35",
+		"mongoose": "^6.6.0",
+		"node-pty": "^0.10.1",
+		"node-typescript-compiler": "^3.0.0",
+		"reflect-metadata": "^0.1.13",
+		"rimraf": "^3.0.2",
+		"rxjs": "^7.5.6",
+		"tsify": "^5.0.4",
+		"tsify-transform": "^1.0.0",
+		"typeorm": "^0.3.10",
+		"vscode-languageserver": "^8.0.2",
+		"vscode-ws-jsonrpc": "^2.0.0"
+	},
+	"resolutions": {
+		"vscode-languageserver-types": "3.17.2"
+	},
+	"devDependencies": {
+		"@nestjs/cli": "^8.0.0",
+		"@nestjs/schematics": "^8.0.0",
+		"@nestjs/testing": "^8.0.0",
+		"@types/cron": "^2.0.0",
+		"@types/express": "^4.17.13",
+		"@types/multer": "^1.4.7",
+		"@types/node": "^18.7.18",
+		"@types/supertest": "^2.0.11",
+		"@typescript-eslint/eslint-plugin": "^5.0.0",
+		"@typescript-eslint/parser": "^5.0.0",
+		"commitlint-circle": "^1.0.0",
+		"concurrently": "^7.4.0",
+		"conventional-changelog": "^3.1.25",
+		"coveralls": "^3.1.1",
+		"delete-empty": "^3.0.0",
+		"eslint": "^8.0.1",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"fancy-log": "^2.0.0",
+		"gulp": "^4.0.2",
+		"gulp-clean": "^0.4.0",
+		"gulp-sourcemaps": "^3.0.0",
+		"gulp-typescript": "^6.0.0-alpha.1",
+		"gulp-uglify": "^3.0.2",
+		"imports-loader": "^4.0.1",
+		"json-loader": "^0.5.7",
+		"lerna": "^5.5.0",
+		"lerna-changelog": "^2.2.0",
+		"nodemon": "^2.0.19",
+		"nyc": "^15.1.0",
+		"prettier": "^2.3.2",
+		"rxjs-compat": "^6.6.7",
+		"sinon": "^14.0.0",
+		"sinon-chai": "^3.7.0",
+		"source-map-support": "^0.5.20",
+		"supertest": "^6.1.3",
+		"ts-jest": "^27.0.3",
+		"ts-loader": "^9.2.3",
+		"ts-node": "^10.9.1",
+		"tsconfig-paths": "^3.10.1",
+		"typescript": "^4.3.5",
+		"vinyl-buffer": "^1.0.1",
+		"vinyl-source-stream": "^2.0.0"
+	},
+	"lint-staged": {
+		"**/*.ts": [
+			"prettier --ignore-path ./.prettierignore --write"
+		],
+		"packages/**/*.json": [
+			"prettier --ignore-path ./.prettierignore --write"
+		]
+	},
+	"changelog": {
+		"labels": {
+			"type: feature :tada:": "Features",
+			"type: bug :sob:": "Bug fixes",
+			"type: enhancement :wolf:": "Enhancements",
+			"type: docs :page_facing_up:": "Docs",
+			"type: code style": "Code style tweaks",
+			"dependencies": "Dependencies"
+		}
+	}
 }
