--- a/package.json
+++ b/package.json
@@ -52,11 +52,12 @@
 		"@nestjs/swagger": "^6.1.2",
 		"@nestjs/websockets": "^9.0.11",
 		"@stackblitz/sdk": "^1.8.0",
-		"@ucsjs/blueprint": "^0.0.41",
-		"@ucsjs/database": "^0.0.41",
-		"@ucsjs/engine": "^0.0.41",
-		"@ucsjs/mongodb": "^0.0.41",
+		"@ucsjs/blueprint": "^0.0.42",
+		"@ucsjs/database": "^0.0.42",
+		"@ucsjs/engine": "^0.0.42",
+		"@ucsjs/mongodb": "^0.0.42",
 		"argv": "^0.0.2",
+		"axios": "^0.27.2",
 		"browserify": "^17.0.0",
 		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.6",
